<?xml version="1.0" encoding="utf-8"?><!--
This code is free  software: you can redistribute it and/or  modify it under the
terms of the GNU Lesser General Public License as published by the Free Software
Foundation,  either version  3 of  the License,  or (at  your option)  any later
version.

This code  is distributed in the  hope that it  will be useful, but  WITHOUT ANY
WARRANTY; without even the implied warranty  of MERCHANTABILITY or FITNESS FOR A
PARTICULAR PURPOSE. See the GNU Lesser  General Public License for more details.

You should have  received a copy of the GNU  Lesser General Public License along
with code. If not, see http://www.gnu.org/licenses/.
-->
<resources>
    <string name="app">Guardian Fall Detector</string>
    <string name="settings">Settings</string>
    <string name="signals">View Signals</string>
    <string name="guardian">Guardian</string>
    <string name="title">Guardian\'s phone number</string>
    <string name="summary">Please set guardian\'s phone number here</string>
    <string name="contact">Contact</string>
    <string name="phone">Guardian\'s phone number</string>
    <string name="search">Search Contacts</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="help">Help</string>
</resources>
