<?xml version="1.0" encoding="utf-8"?><!--
This code is free  software: you can redistribute it and/or  modify it under the
terms of the GNU Lesser General Public License as published by the Free Software
Foundation,  either version  3 of  the License,  or (at  your option)  any later
version.

This code  is distributed in the  hope that it  will be useful, but  WITHOUT ANY
WARRANTY; without even the implied warranty  of MERCHANTABILITY or FITNESS FOR A
PARTICULAR PURPOSE. See the GNU Lesser  General Public License for more details.

You should have  received a copy of the GNU  Lesser General Public License along
with code. If not, see http://www.gnu.org/licenses/.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/help"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableLeft="@android:drawable/ic_menu_call"
            android:drawableStart="@android:drawable/ic_menu_call"
            android:text="@string/help" />

        <Button
            android:id="@+id/settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableLeft="@android:drawable/ic_menu_preferences"
            android:drawableStart="@android:drawable/ic_menu_preferences"
            android:text="@string/settings" />
    </LinearLayout>

    <Button
        android:id="@+id/signals"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_view"
        android:drawableStart="@android:drawable/ic_menu_view"
        android:text="@string/signals" />

    <WebView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>